--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Ignore all test and documentation for archive.
-/.gitattributes export-ignore
-/.gitignore export-ignore
-/README.md export-ignore
-/LICENSE export-ignore
+.gitattributes export-ignore
+.gitignore export-ignore
+README.md export-ignore
+LICENSE export-ignore
